@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-14T08:10:19Z",
-  "count_outdated" : 1262,
-  "uniques_outdated" : 675,
+  "timestamp" : "2023-07-14T16:09:52Z",
+  "count_outdated" : 1264,
+  "uniques_outdated" : 676,
   "count" : 1281,
   "uniques" : 687,
   "clones" : [
-    {
-      "timestamp": "2023-06-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-01T00:00:00Z",
       "count": 1,
