@@ -1,3 +1,12 @@
+2023-07-14T16:09:52Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5556061510 # 1729
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-14
+* notice: last 14d: unq all: 4 17
+* notice: prev accum: outdated-unq outdated-all / unq all: 675 1262 / 687 1281
+* notice: next accum: outdated-unq outdated-all / unq all: 676 1264 / 687 1281
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-06-30] / []
+
 2023-07-14T08:10:19Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5551952204 # 1728
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-14
